--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -14,7 +14,8 @@
                 <p class="price">{{price}}</p>
             </div>
             <div class="card-action">
-                <a href="/courses/{{id}}">Открыть курс</a>
+                <a href="/courses/{{id}}" target="_blank">Открыть курс</a>
+                <a href="/courses/{{id}}/edit?allow=true" target="_blank">Редактировать курс</a>
             </div>
         </div>
     </div>
